<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/vacancy_search"
            android:orderInCategory="0"
            android:showAsAction="never"
            android:title="@string/search" />
        <item
            android:id="@+id/vacancy_register"
            android:orderInCategory="1"
            android:showAsAction="never"
            android:title="@string/vacancy_register_2" />

        <item
            android:id="@+id/vacancies_viewed"
            android:orderInCategory="2"
            android:showAsAction="never"
            android:title="@string/vacancies_viewed" />

        <item
            android:id="@+id/mark_viewed"
            android:orderInCategory="3"
            android:showAsAction="never"
            android:title="@string/mark_viewed" />
<!--
        <item
            android:id="@+id/view_executions"
            android:orderInCategory="4"
            android:showAsAction="never"
            android:title="@string/executions" />
-->
    </group>
</menu>