<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fragment_background"
    android:elevation="@dimen/margin"
    android:padding="@dimen/margin_4">

    <TextView
        android:id="@+id/textData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:text="@string/vacancy_data"
        android:textColor="@color/accent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/textData"
        android:layout_marginTop="@dimen/margin_3"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_vacancy_name"
        android:imeOptions="actionDone"
        android:inputType="text|textAutoCorrect|textCapSentences"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_3"
        android:paddingEnd="@dimen/margin_3"
        android:textColor="@drawable/text_state"
        android:textColorHint="@color/corners"
        android:textCursorDrawable="@drawable/cursor" />

    <CheckBox
        android:id="@+id/checkBoxOnSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_3"
        android:text="@string/in_person"
        android:textColor="@color/text_secondary" />

    <CheckBox
        android:id="@+id/checkBoxHybrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_3"
        android:text="@string/hybrid"
        android:textColor="@color/text_secondary" />

    <CheckBox
        android:id="@+id/checkBoxRemote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_3"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/remote"
        android:textColor="@color/text_secondary" />

    <LinearLayout
        android:id="@+id/rootSpinners"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_3"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxHybrid"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:layout_weight="1">

            <lucns.gupy.views.CustomSpinner
                android:id="@+id/spinnerStates"
                android:layout_width="match_parent"
                android:layout_height="36dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_weight="1">

            <lucns.gupy.views.IndeterminateThreeBalls
                android:id="@+id/progressBarCities"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:visibility="invisible" />

            <lucns.gupy.views.CustomSpinner
                android:id="@+id/spinnerCities"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:enabled="false" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="220dp"
        android:layout_height="36dp"
        android:layout_below="@+id/rootSpinners"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_5"
        android:background="@drawable/button_state"
        android:enabled="false"
        android:src="@drawable/icon_add"
        android:text="@string/search"
        android:textColor="@drawable/text_state" />
</RelativeLayout>