<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:id="@+id/root"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@drawable/fragment_background">    <TextView        android:id="@+id/textTitle"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_centerHorizontal="true"        android:layout_marginStart="@dimen/margin_3"        android:layout_marginTop="@dimen/margin_3"        android:layout_marginEnd="@dimen/margin_3"        android:justificationMode="inter_word"        android:textColor="@color/accent"        android:textSize="18sp"        android:textStyle="bold" />    <TextView        android:id="@+id/textLocation"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_below="@id/textTitle"        android:layout_marginStart="@dimen/margin_3"        android:layout_marginTop="@dimen/margin"        android:textColor="@color/text_primary"        android:textSize="14sp" />    <TextView        android:id="@+id/textType"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_below="@id/textLocation"        android:layout_marginStart="@dimen/margin_3"        android:textColor="@color/text_primary"        android:textSize="14sp" />    <TextView        android:id="@+id/textEnterpriseName"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_below="@id/textType"        android:layout_centerHorizontal="true"        android:layout_marginStart="@dimen/margin_3"        android:layout_marginTop="@dimen/margin"        android:layout_marginEnd="@dimen/margin_3"        android:layout_marginBottom="@dimen/margin"        android:justificationMode="inter_word"        android:textColor="@color/accent"        android:textSize="18sp"        android:textStyle="bold" />    <ScrollView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_below="@+id/textEnterpriseName"        android:layout_marginStart="@dimen/margin"        android:layout_marginEnd="@dimen/margin"        android:layout_marginBottom="@dimen/margin"        android:scrollbarThumbVertical="@drawable/thumb_scrollbar">        <lucns.gupy.views.SmoothRelativeLayout            android:id="@+id/rootTexts"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="@dimen/margin"            android:layout_marginEnd="@dimen/margin"            android:visibility="invisible">            <RelativeLayout                android:layout_width="match_parent"                android:layout_height="wrap_content">                <LinearLayout                    android:id="@+id/rootDate"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:orientation="horizontal">                    <LinearLayout                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_weight="1"                        android:orientation="vertical">                        <TextView                            android:id="@+id/textPublishedDate"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:layout_marginStart="@dimen/margin_3"                            android:layout_marginTop="@dimen/margin"                            android:text="@string/published_date"                            android:textColor="@color/accent" />                        <TextView                            android:id="@+id/textPublishedDateValue"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:layout_marginStart="@dimen/margin_3"                            android:text="@string/not_specified"                            android:textColor="@color/text_primary" />                    </LinearLayout>                    <LinearLayout                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_weight="1"                        android:orientation="vertical">                        <TextView                            android:id="@+id/textExpirationDate"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:layout_marginStart="@dimen/margin_3"                            android:layout_marginTop="@dimen/margin"                            android:text="@string/expiration_date"                            android:textColor="@color/accent" />                        <TextView                            android:id="@+id/textExpirationDateValue"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:layout_marginStart="@dimen/margin_3"                            android:text="@string/not_specified"                            android:textColor="@color/text_primary" />                    </LinearLayout>                </LinearLayout>                <TextView                    android:id="@+id/textVacancyDescription"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_below="@id/rootDate"                    android:layout_marginTop="@dimen/margin_3"                    android:text="@string/vacancy_description"                    android:textColor="@color/accent"                    android:textStyle="bold" />                <TextView                    android:id="@+id/textVacancyDescriptionValue"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_below="@+id/textVacancyDescription"                    android:layout_gravity="center_horizontal"                    android:justificationMode="inter_word"                    android:text="@string/not_specified"                    android:textColor="@color/text_secondary"                    android:textStyle="bold" />                <TextView                    android:id="@+id/textResponsibilitiesDuties"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_below="@+id/textVacancyDescriptionValue"                    android:layout_marginTop="@dimen/margin_3"                    android:text="@string/responsibilities_duties"                    android:textColor="@color/accent"                    android:textStyle="bold" />                <TextView                    android:id="@+id/textResponsibilitiesDutiesValue"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_below="@+id/textResponsibilitiesDuties"                    android:layout_gravity="center_horizontal"                    android:justificationMode="inter_word"                    android:text="@string/not_specified"                    android:textColor="@color/text_secondary"                    android:textStyle="bold" />                <TextView                    android:id="@+id/textRequirementsQualifications"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_below="@+id/textResponsibilitiesDutiesValue"                    android:layout_marginTop="@dimen/margin_3"                    android:text="@string/requirements_qualifications"                    android:textColor="@color/accent"                    android:textStyle="bold" />                <TextView                    android:id="@+id/textRequirementsQualificationsValue"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_below="@+id/textRequirementsQualifications"                    android:layout_gravity="center_horizontal"                    android:justificationMode="inter_word"                    android:text="@string/not_specified"                    android:textColor="@color/text_secondary"                    android:textStyle="bold" />                <TextView                    android:id="@+id/textAdditionalInformation"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_below="@+id/textRequirementsQualificationsValue"                    android:layout_marginTop="@dimen/margin_3"                    android:text="@string/additional_information"                    android:textColor="@color/accent"                    android:textStyle="bold" />                <TextView                    android:id="@+id/textAdditionalInformationValue"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_below="@+id/textAdditionalInformation"                    android:layout_gravity="center_horizontal"                    android:justificationMode="inter_word"                    android:text="@string/not_specified"                    android:textColor="@color/text_secondary"                    android:textStyle="bold" />                <View                    android:layout_width="match_parent"                    android:layout_height="56dp"                    android:layout_below="@id/textAdditionalInformationValue" />            </RelativeLayout>        </lucns.gupy.views.SmoothRelativeLayout>    </ScrollView>    <View        android:layout_width="match_parent"        android:layout_height="56dp"        android:layout_alignParentBottom="true"        android:background="@drawable/gradient_gray" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:layout_centerHorizontal="true"        android:layout_marginStart="@dimen/margin_3"        android:layout_marginEnd="@dimen/margin_3"        android:layout_marginBottom="@dimen/margin_3"        android:orientation="horizontal">        <Button            android:id="@+id/buttonRegister"            android:layout_width="match_parent"            android:layout_height="36dp"            android:layout_weight="1"            android:background="@drawable/button_state_2"            android:text="@string/register" />        <View            android:layout_width="@dimen/margin_3"            android:layout_height="36dp" />        <Button            android:id="@+id/buttonCopy"            android:layout_width="match_parent"            android:layout_height="36dp"            android:layout_weight="1"            android:background="@drawable/button_state"            android:text="@string/copy" />    </LinearLayout>    <TextView        android:id="@+id/textStatus"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_centerInParent="true"        android:text="@string/error_retrieve"        android:textColor="@color/accent"        android:visibility="invisible" />    <ProgressBar        android:id="@+id/progressBar"        style="?android:attr/indeterminateProgressStyle"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_centerInParent="true"        android:indeterminate="true"        android:indeterminateDrawable="@drawable/indeterminate_progress_bar_vector_animation" /></RelativeLayout>